# diploma-final

./: .gitignore  FINAL_WORK_REQUIREMENTS_AND_DOD.md  README.md  WORK_CONTEXT.md
docs/: ALGORITHM_COMPLEXITY_ESTIMATES_RU.md  ARITHMETIC_ALGORITHM_STUDY_RU.md  CLAUDE_F1_3LIMB_OPTIMIZATION_TASK_RU.md  CLAUDE_INDEPENDENT_3LIMB_MONTGOMERY_MUL_TASK_RU.md  DEEP_AGENT_EPRINT1627_OPTIMIZATION_RESEARCH_PROMPT_RU.md  DEEP_AGENT_EPRINT1627_RESEARCH_CORRECTION_PROMPT_RU.md  DEEP_AGENT_LOLLIPOP305_G2_TWIST_FOLLOWUP_RU.md  DEEP_AGENT_LOLLIPOP305_G2_TWIST_TASK_RU.md  DEEP_AGENT_LOLLIPOP305_THEORY_EXTRACTION_TASK_RU.md  DEEP_AGENT_MNT4_MERKLE_FRI_FULL_FORMALIZATION_TASK_RU.md  DEEP_AGENT_MNT4_MERKLE_FRI_REWORK_V2_RU.md  (+26 more)
implementations/article640_mnt4/rust/article640_backend/: Cargo.toml
implementations/article640_mnt4/rust/article640_backend/src/: lib.rs  main.rs
implementations/mnt4_merkle_deep_fri/rust/microtrace_backend/: Cargo.toml
implementations/mnt4_merkle_deep_fri/rust/microtrace_backend/artifacts/benchmark-32q/: metrics.json  proof_debug.json
implementations/mnt4_merkle_deep_fri/rust/microtrace_backend/artifacts/conservative-128q/: fixture_public_inputs.json  proof.hex  solidity_fixture.hex
implementations/mnt4_merkle_deep_fri/rust/microtrace_backend/src/: air.rs  lib.rs  merkle.rs  polynomial.rs  security.rs  serialize.rs  transcript.rs
mnt_cycle_full/: Cargo.toml  MNT_CYCLE_FULL_REPORT.md  README_FINAL.md
mnt_cycle_full/constraints/: README.md
mnt_cycle_full/rust/: README.md
mnt_cycle_full/src/: lib.rs  main.rs
mnt_cycle_full/tests/: cycle_reference.rs
(+236 files in other folders)
