[package]
name = "mnt_cycle_full"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "mnt_cycle_full"
path = "src/lib.rs"

[[bin]]
name = "mnt_cycle_full_report"
path = "src/main.rs"

[dependencies]
ark-ec = "0.5"
ark-ff = "0.5"
ark-mnt4-753 = "0.5"
ark-mnt6-753 = "0.5"
ark-serialize = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
