[package]
name = "article640_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "0.5"
ark-ff = "0.5"
ark-mnt4-753 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
ark-bn254 = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-std = "0.5"
