[package]
name = "mnt4_merkle_deep_fri_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
ark-ec = "0.5"
ark-ff = "0.5"
ark-mnt4-753 = "0.5"
ark-poly = "0.5"
hex = "0.4"
libc = "0.2"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
